2006-04-23  Roger Sayle  <roger@eyesopen.com>

	PR target/21283
	* config/fr30/fr30.md (define_split): Avoid calling gen_lowpart on
	a SImode SUBREG of a floating point register after no_new_pseudos.

2006-04-23  Roger Sayle  <roger@eyesopen.com>

	* config/fr30/fr30.md (addsi_small_int): Use REGNO_PTR_FRAME_P to
	identify potentially eliminable registers to additionally catch
	VIRTUAL_INCOMING_ARGS_REGNUM.
	(addsi3): Update the conditions on when to use addsi_small_int.

2006-04-23  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-tailcall.c (pass_tail_recursion): Use gate_tail_calls too.

2006-04-21  Carlos O'Donell  <carlos@codesourcery.com>
	
	Backport from mainline:
	2006-04-19  Carlos O'Donell  <carlos@codesourcery.com>
		    Nathan Sidwell  <nathan@codesourcery.com>
	PR c/26774
	* stor-layout.c (update_alignment_for_field): Do not align 
	ERROR_MARK nodes.
	(place_union_field): Place union field at the start of the union.
	(place_field): Move ERROR_MARK check later, and use the current
	allocation position to maintain monotonicity.

2006-04-21  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c/25875
	* c-typeck.c (digest_init): Robustify.

2006-04-21  Steve Ellcey  <sje@cup.hp.com>

	* config/pa/t-pa64: Add dependencies on $(GCC_PASSES).

2006-04-21  Paul Brook  <paul@codesourcery.com>

	Backport from mainline.
	* config/arm/arm.c (arm_override_options): Error on iWMMXt and
	hardware floating point.

2006-04-20  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR mudflap/26789
	* tree-mudflap.c (mudflap_finish_file): Skip function when there were
	errors.

2006-04-20  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/27182
	* config/sh/sh.md (movsicc_true+3): Tweak condition for the case
	that the last insn has the REG_INC note.

2006-04-19  Jeff Law  <law@redhat.com>

        PR tree-optimization/26854
	* tree-ssa-dse.c (dse_optimize_stmt): Use has_single_use rather
	than num_imm_uses.
	* tree-ssa-dom.c (simplify_rhs_and_lookup_avail_expr): Similarly.
